Optimized mobile zooming (Was extremely laggy, likely the reason is the crazy amount of blurs I had. Have reduced it significantly on smaller devices and also added a quick fix for the footer

--- a/src/components/cube/cube.scss
+++ b/src/components/cube/cube.scss
@@ -47,12 +47,14 @@ $perspective: 600px;
       height: 100%;
       position: relative;
       transform-style: preserve-3d;
+      will-change: transform;
 
       .cube {
         width: 100%;
         height: 100%;
         position: relative;
         transform-style: preserve-3d;
+        will-change: transform;
 
         .face {
           position: absolute;
